@@ -1,3 +1,12 @@
+2013-04-07  LT140  <http://sites.google.com/site/ltsevenscore/>
+
+	* Thread.h (cntl::Thread): Added cntl::Thread::Sleep().
+	* sample/JobQueue: Added new sample.
+
+2013-04-06  LT140  <http://sites.google.com/site/ltsevenscore/>
+
+	* Thread.h (cntl::Thread): Changed argument order.
+
 2013-03-24  LT140  <http://sites.google.com/site/ltsevenscore/>
 
 	* Thread.h (cntl::Thread): Simple thread wrapper.
